--- a/test.ipynb
+++ b/test.ipynb
@@ -2,8 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2e32b4e8-f614-457e-a7a7-f60b01572290",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2"
+      ],
+      "text/latex": [
+       "2"
+      ],
+      "text/markdown": [
+       "2"
+      ],
+      "text/plain": [
+       "[1] 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2678a2d2-3bc1-4857-bded-765eda9e7f9d",
    "metadata": {},
    "outputs": [],
    "source": []
